Fix: Add missing margin bottom to selectTip

--- a/styles/components/selectTip.css
+++ b/styles/components/selectTip.css
@@ -1,4 +1,6 @@
 .selectTip-group {
+  margin-bottom: 20px;
+
   & label {
     display: block;
     color: var(--grayish-cyan);
